--- a/nginx/ingress.yaml
+++ b/nginx/ingress.yaml
@@ -7,7 +7,7 @@ metadata:
     nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
   rules:
-    - host: nginx.local  # или свой домен
+    - host: nginx.meghuset.net  # или свой домен
       http:
         paths:
           - path: /
