modified ingress domain

--- a/nginx/ingress.yaml
+++ b/nginx/ingress.yaml
@@ -6,6 +6,7 @@ metadata:
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
+  ingressClassName: nginx
   rules:
     - host: nginx.meghuset.net  # или свой домен
       http:
