--- a/argocd/argocd.yaml
+++ b/argocd/argocd.yaml
@@ -19,6 +19,8 @@ spec:
         repoURL: https://github.com/magvay212/test-k8s.git
         targetRevision: HEAD
         path: '{{path.basename}}'
+        kustomize:
+          namePrefix: ''
       destination:
         server: https://kubernetes.default.svc
         namespace: '{{path.basename}}'
