modified app via kustomization

--- a/argocd/argocd.yaml
+++ b/argocd/argocd.yaml
@@ -23,7 +23,7 @@ spec:
           namePrefix: ''
       destination:
         server: https://kubernetes.default.svc
-        namespace: '{{path.basename}}'
+        namespace: '{{path}}'
       syncPolicy:
         automated:
           prune: true
